--- a/pom.xml
+++ b/pom.xml
@@ -24,11 +24,12 @@
         <java.version>1.8</java.version>
 
         <guava.version>23.0</guava.version>
+        <gson.version>2.9.1</gson.version>
         <commons-lang3.version>3.6</commons-lang3.version>
         <commons-cli.version>1.4</commons-cli.version>
         <commons-csv.version>1.5</commons-csv.version>
+        <commons-codec.version>1.17.1</commons-codec.version>
         <commons-io.version>2.6</commons-io.version>
-        <bds-common-framework.version>1.6.7</bds-common-framework.version>
         <jackson-databind.version>2.9.2</jackson-databind.version>
         <cloning.version>1.9.6</cloning.version>
         <evo-inflector.version>1.2.2</evo-inflector.version>
@@ -63,17 +64,6 @@
         <serviceJobId>0</serviceJobId>
 
     </properties>
-
-    <repositories>
-        <repository>
-            <snapshots>
-                <enabled>false</enabled>
-            </snapshots>
-            <id>bintray-bds-tools</id>
-            <name>bintray</name>
-            <url>https://dl.bintray.com/bds/tools</url>
-        </repository>
-    </repositories>
 
     <!-- Licence -->
     <description>
@@ -113,6 +103,11 @@
             <version>${guava.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>${gson.version}</version>
+        </dependency>
+        <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-lang3</artifactId>
             <version>${commons-lang3.version}</version>
@@ -128,76 +123,14 @@
             <version>${commons-csv.version}</version>
         </dependency>
         <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>${commons-codec.version}</version>
+        </dependency>
+        <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
             <version>${commons-io.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>com.blackducksoftware.tools</groupId>
-            <artifactId>common-framework</artifactId>
-            <version>${bds-common-framework.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.thoughtworks.xstream</groupId>
-                    <artifactId>xstream</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.yaml</groupId>
-                    <artifactId>snakeyaml</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.poi</groupId>
-                    <artifactId>poi-ooxml</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>net.jmatrix</groupId>
-                    <artifactId>eproperties</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.jsoup</groupId>
-                    <artifactId>jsoup</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.mail</groupId>
-                    <artifactId>mail</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>javax.activation</groupId>
-                    <artifactId>activation</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.httpcomponents</groupId>
-                    <artifactId>httpclient</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.velocity</groupId>
-                    <artifactId>velocity-tools</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.struts</groupId>
-                    <artifactId>struts-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>postgresql</groupId>
-                    <artifactId>postgresql</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.struts</groupId>
-                    <artifactId>struts-taglib</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.struts</groupId>
-                    <artifactId>struts-tiles</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>org.apache.tika</groupId>
-                    <artifactId>tika-core</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.opencsv</groupId>
-                    <artifactId>opencsv</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
