--- a/pom.xml
+++ b/pom.xml
@@ -23,14 +23,14 @@
         <!-- versions -->
         <java.version>1.8</java.version>
 
-        <guava.version>23.0</guava.version>
-        <gson.version>2.9.1</gson.version>
-        <commons-lang3.version>3.6</commons-lang3.version>
+        <guava.version>33.2.1-jre</guava.version>
+        <gson.version>2.11.0</gson.version>
+        <commons-lang3.version>3.15.0</commons-lang3.version>
         <commons-cli.version>1.4</commons-cli.version>
         <commons-csv.version>1.5</commons-csv.version>
         <commons-codec.version>1.17.1</commons-codec.version>
-        <commons-io.version>2.6</commons-io.version>
-        <jackson-databind.version>2.9.2</jackson-databind.version>
+        <commons-io.version>2.16.1</commons-io.version>
+        <jackson-databind.version>2.17.2</jackson-databind.version>
         <cloning.version>1.9.6</cloning.version>
         <evo-inflector.version>1.2.2</evo-inflector.version>
 
