--- a/pom.xml
+++ b/pom.xml
@@ -31,7 +31,7 @@
         <commons-codec.version>1.17.1</commons-codec.version>
         <commons-io.version>2.16.1</commons-io.version>
         <jackson-databind.version>2.17.2</jackson-databind.version>
-        <cloning.version>1.9.12</cloning.version>
+        <cloning.version>1.10.3</cloning.version>
         <evo-inflector.version>1.3</evo-inflector.version>
 
         <junit.version>4.13.2</junit.version>
@@ -138,7 +138,7 @@
             <version>${jackson-databind.version}</version>
         </dependency>
         <dependency>
-            <groupId>uk.com.robust-it</groupId>
+            <groupId>io.github.kostaskougios</groupId>
             <artifactId>cloning</artifactId>
             <version>${cloning.version}</version>
         </dependency>
