--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
 
         <junit.version>4.13.2</junit.version>
         <assertj-core.version>3.26.3</assertj-core.version>
-        <mockito-all.version>1.10.19</mockito-all.version>
+        <mockito.version>4.11.0</mockito.version>
         <system-rules.version>1.19.0</system-rules.version>
 
         <!-- Plugins -->
@@ -162,8 +162,8 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>${mockito-all.version}</version>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
